# iminspect

./: .gitignore  MANIFEST.in  README.md  iminspect.desktop.tpl  prepare_app_icons.sh  pyproject.toml  python3rc  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
examples/: demo.py  imgview_demo.py  inputs_demo.py
iminspect/: __init__.py  __main__.py  imgview.py  inputs.py  inspection_utils.py  inspection_widgets.py  inspector.py
iminspect/tests/: test_inspector.py
python/: README.md  prepare_environment_py3.sh  python3rc  requirements.txt  setup.py
python/examples/: inspect_demo.py
python/iminspect/: __init__.py  colormaps.py  imgview.py  inputs.py  inspector.py  utils.py
standalone/: iminspect.desktop.tpl  iminspect.sh.tpl  install-standalone-ubuntu-18.04.sh
